[project]
name = "asynchttpserver"
version = "1.0.0"
authors = [
  {name = "HRChen", email = "tn918419@gmail.com"},
]
description = "Simple Asynchronous HTTP Server"
readme = "Readme.md"
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Framework :: AsyncIO",
  "Typing :: Typed"
]
dependencies = [
  "logging>=0.4.9.6",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
